Update Github Actions

--- a/.github/workflows/docker-hub-publish.yaml
+++ b/.github/workflows/docker-hub-publish.yaml
@@ -12,19 +12,14 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: "docker-publish"
+  group: "docker-hub-publish"
   cancel-in-progress: true
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
 
     steps:
       - name: Checkout repository
@@ -33,9 +28,8 @@ jobs:
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_LOGIN }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
@@ -43,4 +37,4 @@ jobs:
           context: .
           push: true
           pull: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          tags: econumo/econumo-one-frontend:latest
